# demo-mcp-server

./: .dockerignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-docker.sh  test_server.py  validate_server.py
.github/: copilot-instructions.md
.github/workflows/: repub.yaml
src/movie_ticket_booking/: server.py
